79/compiling_error.txt
/Users/kenkato/python/atcoder/79/C.cpp:22:3: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
  auto itr;
  ^
/Users/kenkato/python/atcoder/79/C.cpp:22:8: error: declaration of variable 'itr' with deduced type 'auto' requires an initializer
  auto itr;
       ^
1 warning and 1 error generated.
